# splice-xai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/splice_xai/: __init__.py
src/splice_xai/cli/: main.py
src/splice_xai/core/: analyzer.py  config.py  results.py
src/splice_xai/detection/: fasterrcnn_detector.py  sam_segmentation.py  yolo_detector.py
src/splice_xai/inpainting/: base.py  replicate_backend.py
src/splice_xai/utils/: file_io.py  filter_single_instance.py  gpu_manager.py  image_processing.py  subset_images.py  subset_images_2.py  validation.py
src/splice_xai/visualization/: plotting.py
